--- a/Module 1/5. HTML Form & Table/Bài tập/Tạo bảng đơn giản/index.html
+++ b/Module 1/5. HTML Form & Table/Bài tập/Tạo bảng đơn giản/index.html
@@ -16,7 +16,7 @@
         </tr>
         <tr>
             <td>Giáo viên: KhoaNV</td>
-            <td>Ngày học: THứ 3, 5, 7</td>
+            <td>Ngày học: Thứ 3, 5, 7</td>
         </tr>
         <tr>
             <td>Phòng học: Class3/Lab3</td>
@@ -27,7 +27,7 @@
             <th colspan="3"></th>
             <th>Thứ 3</th>
             <th>Thứ 5</th>
-            <th>THứ 7</th>
+            <th>Thứ 7</th>
         </tr>
         <tr id="title">
             <th>Tuần</th>
