--- a/Module 1/9. Cấu trúc điều kiện 2/Thực hành/Sự kiện bàn phím/index.html
+++ b/Module 1/9. Cấu trúc điều kiện 2/Thực hành/Sự kiện bàn phím/index.html
@@ -6,7 +6,7 @@
     <title>Practical</title>
 </head>
 
-<body onload="docReady()">
+<body>
     <form>
         <img id="myImage" src="image/nobita.png" width="20%" style="position: absolute;left:0;top:0;" />
     </form>
