--- a/Module 1/Casestudy/Require 2/Require2.html
+++ b/Module 1/Casestudy/Require 2/Require2.html
@@ -10,10 +10,9 @@
     <ul>
         <li><a href="#" onclick="showInfo();">1. Show Information Customer.</a></li>
         <li><a href="#" onclick="editInfo();">2. Edit Information Customer.</a></li>
-        <li><a href="#">3. Show the amount to be paid after discount.</a></li>
+        <li><a href="#" onclick="showTotalPayment();">3. Show the amount to be paid after discount.</a></li>
     </ul>
 
-    <label for="a"></label>
     <script src="Menu.js"></script>
 </body>
 </html>
