--- a/Module 1/Casestudy/Require 6/Last.html
+++ b/Module 1/Casestudy/Require 6/Last.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 
+    <script type="module">
+        import {main} from "./last.js";
+        main();
+    </script>
 </body>
 </html>
