--- a/Module 1/Casestudy/Require 6/Task 1/Task1.html
+++ b/Module 1/Casestudy/Require 6/Task 1/Task1.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="StyleTask1.css">
     <title>Title</title>
 </head>
 <body>
 
     <script type="module">
-        import {main} from "./last.js";
+        import {main} from "./Manage/Manage.js";
         main();
     </script>
 </body>
